Fixed digital clock text-align issue

--- a/Clock/style.css
+++ b/Clock/style.css
@@ -264,5 +264,6 @@ body {
 		height: 80px;
 		font-size: 300%;
 		line-height: 80px;
+		text-indent: -14px;
 	}
 }
